--- a/front-end/src/pages/Homepage/styles.module.css
+++ b/front-end/src/pages/Homepage/styles.module.css
@@ -1,4 +1,9 @@
 
+.dashboard {
+    display: flex;
+    flex-direction: row;
+}
+
 .drawer {
     width: 18%;
     height: calc(100vh - 100px);
@@ -25,4 +30,11 @@
     width: 2px;
     height: 2px;
     font-size: 16px;
+}
+
+.containerFormTarefa {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 40px;
 }
